fix: :boom: migrate data

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  /* rounded-lg */
+  border-radius: 0.5rem;
+}
+::-webkit-scrollbar-track:hover {
+  /* bg-gray-300 */
+  background: #e5e7eb;
+}
+
+::-webkit-scrollbar-thumb {
+  /* bg-blue-500 */
+  background: #1d4ed8;
+  /* rounded-lg */
+  border-radius: 0.5rem;
+}
